@@ -47,6 +47,30 @@
        ))
 
 
+(defun charsets-to-mime-charset (charsets)
+  "Return MIME charset from list of charset CHARSETS.
+This function refers variable `charsets-mime-charset-alist'
+and `default-mime-charset'."
+  (if charsets
+      (or (catch 'tag
+	    (let ((rest charsets-mime-charset-alist)
+		  cell)
+	      (while (setq cell (car rest))
+		(if (catch 'not-subset
+		      (let ((set1 charsets)
+			    (set2 (car cell))
+			    obj)
+			(while set1
+			  (setq obj (car set1))
+			  (or (memq obj set2)
+			      (throw 'not-subset nil))
+			  (setq set1 (cdr set1)))
+			t))
+		    (throw 'tag (cdr cell)))
+		(setq rest (cdr rest)))))
+	  default-mime-charset)))
+
+
 ;;; @ end
 ;;;
 
