@@ -1,5 +1,16 @@
 1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
+	* poem.el, emu.el: Move `string-as-unibyte',
+	`string-as-multibyte', `char-int', `int-char' and
+	`char-or-char-int-p' from emu.el to poem.el.
+
+1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
+	* mcharset.el, emu.el: Move function `charsets-to-mime-charset'
+	from emu.el to mcharset.el.
+
+1998-09-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
 	* emu.el, emu-x20.el, emu-nemacs.el, emu-mule.el, emu-latin1.el,
 	emu-e20.el:
 	  - Move `insert-binary-file-contents' from emu-e20.el,
